fixed header tab spacing issue

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -60,6 +60,7 @@ $pastel-grey: #F9F9F9;
 $tortoise: #30544F;
 $white: #fff;
 $black:#000;
+$light-violet:  #3F3F82;
 
 /// Relative or absolute URL where all assets are served from
 /// @type String
